added mapping common of database for user class fields